--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,3 +47,11 @@ input:focus-within ~ label {
         transform: rotate(360deg);
     }
 }
+
+@layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+}
